# rst2sh5

./: .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  Makefile  README.rst  pylintrc  requirements.txt  setup.cfg  setup.py  tox.ini
requirements/: install.txt  package.txt
src/rst2sh5/: __init__.py  main.py  meta.py  writer.py
test/: test_unit.py
