#


[check]
metadata = 1
strict = 1

[metadata]
name = rst2sh5
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = "Docutils writer outputting semantic HTML5"
license = Apache-2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pypi.org/project/rst2sh5/

[options]
install_requires =
    beautifulsoup4
    docutils
    html5lib
    importlib_metadata
package_dir =
    = src
packages = find:

[options.entry_points]
console_scripts =
    rst2sh5 = rst2sh5.main:entry_point

[options.extras_require]
dev_package =
    twine
    wheel
dev_test =
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-pycodestyle
    pytest-pydocstyle
    pytest-pylint
    pytest-yapf3
    yapf
dev =
    %(dev_package)s
    %(dev_test)s

[options.packages.find]
where = src


# EOF
